--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
       <nav class="navigation">
         <img class="navigation__logo" src="assets/logo-dark.svg" alt="logo" />
-        <button class="btn btn--nav">Get started</button>
+        <button class="btn btn--nav">Get Started</button>
       </nav>
       <div class="content">
         <div class="content__text">
@@ -34,7 +34,7 @@
             Our modern courses across a range of in-demand skills will give you
             the knowledge you need to live the life you want.
           </p>
-          <button class="btn btn--header">Get started</button>
+          <button class="btn btn--header">Get Started</button>
         </div>
       </div>
       <div class="image">
@@ -48,14 +48,36 @@
           />
           <source
             srcset="
+              assets/image-hero-mobile.webp,
+              assets/image-hero-mobile@2x.webp 2x
+            "
+            type="image/webp"
+            media="(max-width: 375px)"
+          />
+          <source
+            srcset="
               assets/image-hero-tablet.png,
               assets/image-hero-tablet@2x.png 2x
             "
             media="(max-width: 768px)"
           />
+          <source
+            srcset="
+              assets/image-hero-tablet.webp,
+              assets/image-hero-tablet@2x.webp 2x
+            "
+            type="image/webp"
+            media="(max-width: 768px)"
+          />
           <img
             srcset="assets/image-hero-desktop@2x.png 2x"
             src=" assets/image-hero-desktop.png"
+            alt="Girl with coffee"
+          />
+          <img
+            srcset="assets/image-hero-desktop@2x.webp 2x"
+            type="image/webp"
+            src=" assets/image-hero-desktop.webp"
             alt="Girl with coffee"
           />
         </picture>
@@ -75,7 +97,7 @@
             Learn the latest animation techniques to create stunning motion
             design and captivate your audience.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get started</a>
+          <a href="#" class="card__cta body-m-bold">Get Started</a>
         </div>
         <div class="card card--3">
           <img class="card__img" src="assets/icon-design.svg" alt="Design" />
@@ -84,7 +106,7 @@
             Create beautiful, usable interfaces to help shape the future of how
             the web looks.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get started</a>
+          <a href="#" class="card__cta body-m-bold">Get Started</a>
         </div>
         <div class="card card--4">
           <img
@@ -97,16 +119,16 @@
             Explore critical fundamentals like lighting, composition, and focus
             to capture exceptional photos.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get started</a>
+          <a href="#" class="card__cta body-m-bold">Get Started</a>
         </div>
         <div class="card card--5">
           <img class="card__img" src="assets/icon-crypto.svg" alt="Crypto" />
           <h3 class="card__heading heading-s">Crypto</h3>
           <p class="card__text body-m">
-            All you need to know to get started investing in crypto. Go from
+            All you need to know to get Started investing in crypto. Go from
             beginner to advanced with this 54 hour course.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get started</a>
+          <a href="#" class="card__cta body-m-bold">Get Started</a>
         </div>
         <div class="card card--6">
           <img
@@ -119,13 +141,13 @@
             A step-by-step playbook to help you start, scale, and sustain your
             business without outside investment.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get started</a>
+          <a href="#" class="card__cta body-m-bold">Get Started</a>
         </div>
       </div>
       <div class="footer"></div>
       <div class="footer__content">
         <img class="navigation__logo" src="assets/logo-light.svg" alt="logo" />
-        <button class="btn btn--footer">Get started</button>
+        <button class="btn btn--footer">Get Started</button>
       </div>
     </div>
   </body>
