--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <img class="card__img" src="assets/icon-crypto.svg" alt="Crypto" />
           <h3 class="card__heading heading-s">Crypto</h3>
           <p class="card__text body-m">
-            All you need to know to get Started investing in crypto. Go from
+            All you need to know to get started investing in crypto. Go from
             beginner to advanced with this 54 hour course.
           </p>
           <a href="#" class="card__cta body-m-bold">Get Started</a>
