update button text and gradient

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
       <nav class="navigation">
         <img class="navigation__logo" src="assets/logo-dark.svg" alt="logo" />
-        <button class="btn btn--nav">Get Started</button>
+        <button class="btn btn--nav body-m-bold">Get Started</button>
       </nav>
       <div class="content">
         <div class="content__text">
@@ -34,7 +34,7 @@
             Our modern courses across a range of in-demand skills will give you
             the knowledge you need to live the life you want.
           </p>
-          <button class="btn btn--header">Get Started</button>
+          <button class="btn btn--header body-m-bold">Get Started</button>
         </div>
       </div>
       <div class="image">
@@ -147,7 +147,7 @@
       <div class="footer"></div>
       <div class="footer__content">
         <img class="navigation__logo" src="assets/logo-light.svg" alt="logo" />
-        <button class="btn btn--footer">Get Started</button>
+        <button class="btn btn--footer body-m-bold">Get Started</button>
       </div>
     </div>
   </body>
