move from classes to mixins

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <div class="wrapper">
       <nav class="navigation">
         <img class="navigation__logo" src="assets/logo-dark.svg" alt="logo" />
-        <button class="btn btn--nav body-m-bold">Get Started</button>
+        <button class="btn btn--nav">Get Started</button>
       </nav>
       <div class="content">
         <div class="content__text">
-          <h1 class="content__text--heading heading-xl">
+          <h1 class="content__text--heading">
             Maximize skill, minimize budget
           </h1>
           <p class="content__text--info body-m">
             Our modern courses across a range of in-demand skills will give you
             the knowledge you need to live the life you want.
           </p>
-          <button class="btn btn--header body-m-bold">Get Started</button>
+          <button class="btn btn--header">Get Started</button>
         </div>
       </div>
       <div class="image">
@@ -84,7 +84,7 @@
       </div>
       <div class="cards">
         <div class="card card--1">
-          <h2 class="heading-m">Check out our most popular courses!</h2>
+          <h2 class="card--1-heading">Check out our most popular courses!</h2>
         </div>
         <div class="card card--2">
           <img
@@ -92,21 +92,21 @@
             src="assets/icon-animation.svg"
             alt="Animation"
           />
-          <h3 class="card__heading heading-s">Animation</h3>
+          <h3 class="card__heading">Animation</h3>
           <p class="card__text body-m">
             Learn the latest animation techniques to create stunning motion
             design and captivate your audience.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get Started</a>
+          <a href="#" class="card__cta">Get Started</a>
         </div>
         <div class="card card--3">
           <img class="card__img" src="assets/icon-design.svg" alt="Design" />
-          <h3 class="card__heading heading-s">Design</h3>
+          <h3 class="card__heading">Design</h3>
           <p class="card__text body-m">
             Create beautiful, usable interfaces to help shape the future of how
             the web looks.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get Started</a>
+          <a href="#" class="card__cta">Get Started</a>
         </div>
         <div class="card card--4">
           <img
@@ -114,21 +114,21 @@
             src="assets/icon-photography.svg"
             alt="Photography"
           />
-          <h3 class="card__heading heading-s">Photography</h3>
+          <h3 class="card__heading">Photography</h3>
           <p class="card__text body-m">
             Explore critical fundamentals like lighting, composition, and focus
             to capture exceptional photos.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get Started</a>
+          <a href="#" class="card__cta">Get Started</a>
         </div>
         <div class="card card--5">
           <img class="card__img" src="assets/icon-crypto.svg" alt="Crypto" />
-          <h3 class="card__heading heading-s">Crypto</h3>
+          <h3 class="card__heading">Crypto</h3>
           <p class="card__text body-m">
             All you need to know to get started investing in crypto. Go from
             beginner to advanced with this 54 hour course.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get Started</a>
+          <a href="#" class="card__cta">Get Started</a>
         </div>
         <div class="card card--6">
           <img
@@ -136,18 +136,18 @@
             src="assets/icon-business.svg"
             alt="Business"
           />
-          <h3 class="card__heading heading-s">Business</h3>
+          <h3 class="card__heading">Business</h3>
           <p class="card__text body-m">
             A step-by-step playbook to help you start, scale, and sustain your
             business without outside investment.
           </p>
-          <a href="#" class="card__cta body-m-bold">Get Started</a>
+          <a href="#" class="card__cta">Get Started</a>
         </div>
       </div>
       <div class="footer"></div>
       <div class="footer__content">
         <img class="navigation__logo" src="assets/logo-light.svg" alt="logo" />
-        <button class="btn btn--footer body-m-bold">Get Started</button>
+        <button class="btn btn--footer">Get Started</button>
       </div>
     </div>
   </body>
